# temporal_walk

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  MANIFEST.in  README.md  TemporalWalk.cpp  TemporalWalk.h  build_commands.txt  main.cpp  random_picker_test.ipynb  requirements.txt  setup.py  temporal_walk.cpp  temporal_walk.h  temporal_walk_networkx_integration_test.py  temporal_walk_test.py  temporal_walk_wrapper.cpp  test_temporal_walk.cpp  utils.h
data/: sample_data.csv  sample_edges.csv
docs/: _temporal_random_walk.md  _temporal_walk.md
docs/html/: _temporal_random_walk_8cuh_source.html  _temporal_walk_8cuh_source.html  annotated.html  annotated_dup.js  class_temporal_random_walk-members.html  class_temporal_random_walk.html  class_temporal_random_walk.js  class_temporal_walk-members.html  class_temporal_walk.html  class_temporal_walk.js  classes.html  dir_11e3513d4656415d8a8e2605e11d0cad.html  dir_11e3513d4656415d8a8e2605e11d0cad.js  dir_2cb6c84061b19065b8f56ff881d3ea1c.html  dir_2cb6c84061b19065b8f56ff881d3ea1c.js  dir_3befd27b4012fe65b63aaaf28dbb6a03.html  dir_3befd27b4012fe65b63aaaf28dbb6a03.js  dir_5b97ed2dadd7d0a0d217598c131d4165.html  dir_5b97ed2dadd7d0a0d217598c131d4165.js  dir_6501a37691b83d7141b9ceb44fde7eab.html  dir_6501a37691b83d7141b9ceb44fde7eab.js  dir_b775e85b5dc72b66bf2e96a310531ee9.html  dir_b775e85b5dc72b66bf2e96a310531ee9.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  functions_0.js  functions_1.js  functions_3.js  searchdata.js
models/: Node.cpp  Node.h  TemporalEdge.cpp  TemporalEdge.h  TemporalGraph.cpp  TemporalGraph.h
py_tests/: temporal_random_walk_networkx_integration_test.py  temporal_random_walk_test.py  temporal_walk_networkx_integration_test.py  temporal_walk_test.py
random/: ExponentialRandomPicker.cpp  ExponentialRandomPicker.h  LinearRandomPicker.cpp  LinearRandomPicker.h  RandomPicker.h  UniformRandomPicker.cpp  UniformRandomPicker.h
temporal_random_walk/py_interface/: CMakeLists.txt  _temporal_random_walk.cpp  random_picker_proxies.h  temporal_random_walk_proxy.h
temporal_random_walk/src/common/: CudaRandomStates.cuh  common_vector.cuh  device_vector.cuh  host_vector.h  macros.cuh  types.cuh
temporal_random_walk/src/core/: ITemporalRandomWalk.cuh  TemporalRandomWalk.cu  TemporalRandomWalk.cuh  TemporalRandomWalkCPU.cu  TemporalRandomWalkCPU.cuh  TemporalRandomWalkCUDA.cu  TemporalRandomWalkCUDA.cuh  structs.h
temporal_random_walk/src/cuda_common/: CudaRandomStates.cu  CudaRandomStates.cuh  PolicyProvider.cuh  config.cuh  cuda_config.cuh  functions.cuh  types.cuh
temporal_random_walk/src/data/: common_vector.cuh  structs.cuh
temporal_random_walk/src/random/: ExponentialIndexRandomPicker.cu  ExponentialIndexRandomPicker.cuh  IndexBasedRandomPicker.cu  IndexBasedRandomPicker.cuh  IndexBasedRandomPicker.h  LinearRandomPicker.cu  LinearRandomPicker.cuh  RandomPicker.h  UniformRandomPicker.cu  UniformRandomPicker.cuh  WeightBasedRandomPicker.cu  WeightBasedRandomPicker.cuh  WeightBasedRandomPickerGPU.cu  WeightBasedRandomPickerGPU.cuh
temporal_random_walk/src/structs/: enums.h  structs.cuh
temporal_random_walk/src/utils/: rand_utils.cuh  utils.h
temporal_random_walk/test/: CMakeLists.txt  test_edge_data.cpp  test_edge_data_weights.cpp  test_node_edge_index.cpp  test_node_edge_index_weights.cpp  test_node_mapping.cpp  test_random_picker.cpp  test_temporal_graph.cpp  test_temporal_graph_get_node_edge_at.cpp  test_temporal_graph_weights.cpp  test_temporal_random_walk.cpp  test_utils.h  test_weight_based_random_picker.cpp
temporal_random_walk/test_run/: CMakeLists.txt  test_run_exponential_picker.cpp  test_run_temporal_random_walk.cpp  test_run_temporal_random_walk_2.cpp  test_utils.h
temporal_walk/: __init__.py  _temporal_walk.cpp
temporal_walk/core/: TemporalWalk.cpp  TemporalWalk.h
temporal_walk/models/: TemporalGraph.h
temporal_walk/py_interface/: CMakeLists.txt  _temporal_walk.cpp  random_picker_proxies.h  temporal_walk_proxy.h
temporal_walk/random/: ExponentialRandomPicker.cpp  RandomPicker.h
temporal_walk/src/config/: constants.h
temporal_walk/src/core/: TemporalWalk.cpp  TemporalWalk.cu  TemporalWalk.cuh  TemporalWalk.h  structs.h
temporal_walk/src/cuda/: DualVector.cpp  DualVector.cu  DualVector.cuh  DualVector.h  cuda_functions.cuh  cuda_random_functions.cuh  dual_vector.cuh  dual_vector.h  macros.h  types.h
temporal_walk/src/cuda_common/: CudaRandomStates.cu  PolicyProvider.cuh  config.cuh  cuda_random_functions.cuh  types.cuh
temporal_walk/src/data/: EdgeData.cpp  EdgeData.cu  EdgeData.cuh  EdgeData.h  NodeEdgeIndex.cpp  NodeEdgeIndex.cu  NodeEdgeIndex.cuh  NodeEdgeIndex.h  NodeMapping.cpp  NodeMapping.cu  NodeMapping.cuh  NodeMapping.h  TemporalGraph.cpp  TemporalGraph.cu  TemporalGraph.cuh  TemporalGraph.h
temporal_walk/src/models/: Node.cpp  Node.h  TemporalEdge.cpp  TemporalEdge.h  TemporalGraph.cpp  TemporalGraph.h  TimestampGroupedEdges.cpp  TimestampGroupedEdges.h
temporal_walk/src/random/: ExponentialIndexRandomPicker.cpp  ExponentialIndexRandomPicker.cu  ExponentialIndexRandomPicker.cuh  ExponentialIndexRandomPicker.h  ExponentialRandomPicker.cpp  ExponentialWeightRandomPicker.cpp  ExponentialWeightRandomPicker.h  IndexBasedRandomPicker.h  LinearRandomPicker.cpp  RandomPicker.h  (+13 more)
temporal_walk/test/: CMakeLists.txt  run_temporal_walk.cpp  test_edge_data.cpp  test_edge_data_weights.cpp  test_exponential_weight_random_picker.cpp  test_node_edge_index.cpp  test_node_edge_index_weights.cpp  test_node_mapping.cpp  test_random_picker.cpp  test_temporal_graph.cpp  test_temporal_graph_get_node_edge_at.cpp  test_temporal_graph_weights.cpp  test_temporal_walk.cpp  test_utils.h  test_weight_based_random_picker.cpp
temporal_walk/test_run/: CMakeLists.txt  print_walks.h  run_temporal_walk.cpp  test_run_exponential_picker.cpp  test_run_temporal_walk.cpp  test_run_temporal_walk_2.cpp  test_utils.h
temporal_walk/utils/: utils.h
(+89 files in other folders)
